wrapped blog template menu to nav class, styled nav to fixed pos, buggy

--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,10 @@ ul, ol {
     padding-bottom: 1em;
 }
 
+nav {
+  position: fixed;
+}
+
 a {
     text-decoration: none;
     color: black
